# uv-k1-k5v3-firmware-custom

./: CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  compile-with-docker.sh
.github/workflows/: main.yml
App/: CMakeLists.txt  board.c
src/: CMakeLists.txt  am_fix.c  audio.c  audio.h  board.c  debugging.h  functions.c  main.c  radio.c  scheduler.c  screenshot.c  settings.c  settings.h
src/apps/: settings_new.c
src/apps/launcher/: launcher.c  launcher.h
src/apps/settings/: settings.c
src/apps/spectrum/: spectrum.c
src/apps/sysinfo/: sysinfo.c  sysinfo.h
src/core/: version.c  version.h
src/drivers/: CMakeLists.txt
src/drivers/bsp/: aes.c  backlight.c  bk1080.c  bk1080.h  bk4819.c  bk4819.h  bk4829.c  eeprom.c  eeprom_compat.c  flash.c  i2c.c  keyboard.c  py25q16.c  spi.c  st7565.c  system.c  uart.c  vcp.c  vcp.h  voice.c
src/features/: action.c  action.h  aircopy.c  aircopy.h  app.c  breakout.c  breakout.h  chFrScanner.c  common.c  dtmf.c  flashlight.c  fm.c  fm.h  generic.c  main_screen.c  main_screen.h  menu.c  rega.c  scanner.c  scanner.h  spectrum.c  spectrum.h  uart.c
src/helper/: battery.c  boot.c  boot.h
src/ui/: aircopy.c  battery.c  battery.h  fmradio.c  helper.c  helper.h  inputbox.h  lock.c  main.c  menu.c  menu.h  scanner.c  status.c  ui.c  ui.h  welcome.c
